--- a/Glossary/glossaryData.html
+++ b/Glossary/glossaryData.html
@@ -21,9 +21,7 @@
           </tr>
         </thead>
 
-        <tbody class="glossary-data">
-          <tr></tr>
-        </tbody>
+        <tbody class="glossary-data"></tbody>
       </table>
     </div>
 
