--- a/The DOM Detective/My Book List/myBookList.html
+++ b/The DOM Detective/My Book List/myBookList.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="myBookList.css" />
   </head>
   <body>
-    <h1>My Book List</h1>
+    <div class="row">
+      <h1>My Book List</h1>
 
-    <ul></ul>
+      <ul></ul>
+    </div>
 
     <script src="myBookList.js"></script>
   </body>
