--- a/Glossary/glossaryData.html
+++ b/Glossary/glossaryData.html
@@ -8,21 +8,23 @@
     <link rel="stylesheet" href="glossaryData.css" />
   </head>
   <body>
-    <h1>Glossary</h1>
+    <div class="row">
+      <h1>Glossary</h1>
 
-    <div class="glossaries">
-      <table>
-        <thead>
-          <tr>
-            <th>Term</th>
-            <th>Class</th>
-            <th>Definition</th>
-            <th>Tags</th>
-          </tr>
-        </thead>
+      <div class="glossaries">
+        <table>
+          <thead>
+            <tr>
+              <th>Term</th>
+              <th>Class</th>
+              <th>Definition</th>
+              <th>Tags</th>
+            </tr>
+          </thead>
 
-        <tbody class="glossary-data"></tbody>
-      </table>
+          <tbody class="glossary-data"></tbody>
+        </table>
+      </div>
     </div>
 
     <script src="glossaryData.js"></script>
